test/gpu/native/limitations/iterateOverMultidimDomain.good
warning: The prototype GPU support implies --no-checks. This may impact debuggability. To suppress this warning, compile with --no-checks explicitly
iterateOverMultidimDomain.chpl:3: error: GPU support does not currently allow nested kernel launches. Do you have
nested forall/foreach loops or looping over a multidimensional domain?
